--- a/Task_2_3_1/src/main/resources/game.fxml
+++ b/Task_2_3_1/src/main/resources/game.fxml
@@ -1,11 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.canvas.Canvas?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<VBox xmlns:fx="http://javafx.com/fxml/1"
-      fx:id="box"
-      onKeyPressed="#handleKeyPressed" xmlns="http://javafx.com/javafx/11.0.2"
-      fx:controller="ru.nsu.fit.oop.veber.view.GameViewImpl">
+<StackPane xmlns:fx="http://javafx.com/fxml/1"
+           fx:id="stackPane"
+           onKeyPressed="#handleKeyPressed"
+           xmlns="http://javafx.com/javafx/11.0.2"
+           fx:controller="ru.nsu.fit.oop.veber.view.GameViewImpl"
+           stylesheets="gameStyle.css">
+    <VBox fx:id="box">
+        <Canvas fx:id="gameCanvas" onKeyPressed="#handleKeyPressed" focusTraversable="true" height="800" width="600"/>
+    </VBox>
 
-    <Canvas fx:id="gameCanvas" onKeyPressed="#handleKeyPressed" focusTraversable="true" height="800" width="600"/>
-</VBox>
+    <AnchorPane fx:id="pauseMenu" visible="false">
+        <VBox layoutX="250.0" layoutY="300.0" spacing="10.0">
+            <Button fx:id="continueButton" mnemonicParsing="false" onAction="#handleContinueButton" text="Продолжить"/>
+            <Button fx:id="exitButton" mnemonicParsing="false" onAction="#handleExitButton" text="Выход"/>
+        </VBox>
+    </AnchorPane>
+</StackPane>
