make normally pause the game

--- a/Task_2_3_1/src/main/resources/gameStyle.css
+++ b/Task_2_3_1/src/main/resources/gameStyle.css
@@ -1,6 +1,6 @@
 /* Цвет фона */
 .root {
-    -fx-background-color: #4CAF50;
+    -fx-background-color: grey;
 }
 
 /* Стиль для основного текста */
@@ -14,6 +14,7 @@
 
 /* Общий стиль для кнопок */
 .button {
+    -fx-background-color: #2E7D32;
     -fx-border-radius: 15;
     -fx-background-radius: 15;
     -fx-text-fill: white;
@@ -23,7 +24,6 @@
     -fx-cursor: hand;
     -fx-alignment: center;
 }
-
 
 /* Стиль для кнопок при наведении */
 .button:hover {
