some game changes

--- a/Task_2_3_1/src/main/resources/game.fxml
+++ b/Task_2_3_1/src/main/resources/game.fxml
@@ -15,7 +15,7 @@
         <Canvas fx:id="gameCanvas" onKeyPressed="#handleKeyPressed" focusTraversable="true" height="600" width="800"/>
     </VBox>
 
-    <AnchorPane fx:id="pauseMenu">
+    <AnchorPane fx:id="pauseMenu" visible="false">
         <VBox layoutX="250.0" layoutY="300.0" spacing="10.0">
             <Button fx:id="continueButton" mnemonicParsing="false" onAction="#handleContinueButton" text="Продолжить"/>
             <Button fx:id="exitButton" mnemonicParsing="false" onAction="#handleExitButton" text="Выход"/>
